# libaltsound

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: libaltsound.yml
src/: altsound.cpp  altsound.h  altsound_csv_parser.cpp  altsound_csv_parser.hpp  altsound_data.cpp  altsound_data.hpp  altsound_file_parser.cpp  altsound_file_parser.hpp  altsound_ini_processor.cpp  altsound_ini_processor.hpp  altsound_logger.cpp  altsound_logger.hpp  altsound_processor.cpp  altsound_processor.hpp  altsound_processor_base.cpp  altsound_processor_base.hpp  gsound_csv_parser.cpp  gsound_csv_parser.hpp  gsound_processor.cpp  gsound_processor.hpp  miniaudio_bass_compat.cpp  miniaudio_bass_compat.hpp  miniaudio_private.c  miniaudio_private.h  test.cpp
